--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -2,3 +2,7 @@ main {
     height: 100vh;
     background-color: #FFC17A;
 }
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: #BCBDDC;
+  }
