updating node modules and updating credentials

--- a/front-end/src/Styles/FoodForm.css
+++ b/front-end/src/Styles/FoodForm.css
@@ -1,3 +1,4 @@
 .selection {
-    border: 4mm ridge rgba(211, 220, 50, .6);
+    /* border: 4mm ridge rgba(211, 220, 50, .6); */
+    border-style: inset;
 }
